# edu_bin

./: .gitignore
00_busia_react_native/: App.tsx  app.json  package-lock.json  package.json
00_busia_react_native/components/: ImageViewScreen.tsx  LoginButton.tsx  RegisterButton.tsx  WelcomeScreen.tsx
00_busia_react_native/types/: imades.d.ts
01_unity_proto/modTheCube/: Cube.cs
01_unity_proto/pp/: CameraController.cs  EnemyController.cs  HitPoints.cs  PlayerController.cs  Weapon.cs  (+2 more)
02_challenge_xix/: docker-compose.yml  index.js  package-lock.json  package.json
04_anton/: black_jack.py  configuration.py  conftest.py  pytest.ini  requirements.txt  section_10.py  section_11.py  section_14.py  section_16.py  section_17.py  section_19.py  test_file.py  test_start_pytest.py
05_pinpong/: package-lock.json  package.json  version.js
06_space_inviders/: removeme.js
07_poplydron_striker/: LevelProvider.cs  MeshGenerator.cs  Projectile.cs  SlowSphere.cs  Striker.cs  Target.cs  TheStarController.cs  UIHandler.cs
09_file_db_v1/: index.ts  package-lock.json  package.json
10_weather_engine/: index.ts  package-lock.json
11_nodegui/: .gitignore  index.js  package-lock.json  package.json
12_gengine/: .gitignore  CMakeLists.txt  a_game_entity.h  applicationclass.cpp  applicationclass.h  cameraclass.cpp  colorshaderclass.cpp  colorshaderclass.h  d3dclass.cpp  d3dclass.h  direct3d.cpp  direct3d.h  game_engine.cpp  game_engine.h  global.h  index.cpp  input_manager.cpp  input_manager.h  main.cpp  modelclass.cpp  modelclass.h  systemclass.cpp  systemclass.h  window.cpp  window.h
12_gengine/entities/: quit_game_entity.cpp  quit_game_entity.h
13_gflw/: CMakeLists.txt  main.cpp
13_gflw/shaders/: fragment.glsl  vertex.glsl
13_gflw/src/: IndexBuffer.cpp  IndexBuffer.h  Renderer.cpp  Renderer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  main.cpp
14_jscanvas2d3d/: .gitignore  package-lock.json  package.json
15_snake_game_ts/: version.js
17_webgl_2d/: package-lock.json  webpack.config.js
18_period_react_native/: App.tsx  CalendarContext.tsx  DayContext.tsx  MonthContext.tsx  app.json  contracts.ts  dayUtil.ts  package-lock.json  package.json
19_babel_ext/: babel-plugin.js  babel.config.json  package-lock.json  package.json
20_file_editor/: README.md
21_electron_diagram_editor/: .gitignore  electron-reload.js  package-lock.json  package.json  webpack-be.config.js  webpack-fe.config.js
22_eat_circle/: package-lock.json  package.json  tsconfig.json
23_ternimal_filenav/: .gitignore  esbuild.config.js  package-lock.json  package.json  tsconfig.json
(+239 files in other folders)
